<resources>
    <string name="app_name">yilan</string>
    <string name="shape_list_url">http://115.159.33.231:8888/files/all</string>
    <string name="welcome">欢迎使用XCS组态监控软件</string>
    <string name="login_tip">请先登录</string>
    <string name="login_phone_tip">请输入您的登录电话</string>
    <string name="login_password_tip">请输入您的密码</string>
    <string name="remember_me_tip">记住密码</string>
    <string name="auto_login_tip">自动登录</string>
    <string name="login_btn_tip">登陆</string>
    <string name="login_url">http://192.168.2.105/applogin?telephone=</string>
    <string name="update_user_url">http://192.168.2.105/user/updateuser</string>
    <string name="search_item_url">http://192.168.2.105/manage/getitemsbypage</string>
    <string name="get_item_url">http://192.168.2.105/manage/getitem</string>
    <string name="file_search_url">http://192.168.2.105/files/byfamily</string>
    <string name="family_list_url">http://192.168.2.105/files/familys</string>
    <string name="file_content_url">http://192.168.2.105/files/content</string>
    <string name="real_data_url">ws://192.168.2.105/datas</string>
</resources>
