<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/login_show_name"
        android:textColor="@color/colorPrimary"
        android:textSize="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="#DE1010"
        android:text="@string/login_tip" />
    <EditText
        android:id="@+id/loginServer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_editor_border"
        android:ems="10"
        android:hint="@string/login_server_tip"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:singleLine="true">
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/loginTel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_editor_border"
        android:ems="10"
        android:hint="@string/login_phone_tip"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:singleLine="true">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_editor_border"
        android:hint="@string/login_password_tip"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remember_me_tip"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/autoLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auto_login_tip"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_primary"
        android:textColor="#FFFFFF"
        android:text="@string/login_btn_tip"
        android:textSize="25sp" />

</LinearLayout>